syntax = "proto3";

option go_package = "internal/genproto/proto";

package proto;

import "common.proto";

service CertificateService {
    rpc Create(CreateCertificate) returns (Void);
    rpc Update(UpdateCertificate) returns (Void);
    rpc Delete(ById) returns (Void);
    rpc GetById(ById) returns (CertificateRes);
    rpc GetList(GetListCertificateReq) returns (GetListCertificateRes);
}

message CreateCertificate {
    string name = 1;
    float  ielts_score = 2;
    string cefr_level = 3;
    string certificate_url = 4;
}

message UpdateCertificate {
    string id = 1;
    string name = 2;
    float  ielts_score = 3;
    string cefr_level = 4;
    string certificate_url = 5;
}

message CertificateRes {
    string id = 1;
    string name = 2;
    string  ielts_score = 3;
    string cefr_level = 4;
    string certificate_url = 5;
    string created_at = 6;
}

message GetListCertificateReq {
    string name = 1;
    float  ielts_score = 2;
    string cefr_level = 3;
    Filter filter = 4;
}

message GetListCertificateRes {
    repeated CertificateRes certificates = 1;
    int32 total_count = 2;
}
