syntax = "proto3";

option go_package = "internal/genproto/proto";

package proto;

import "common.proto";

service TeacherService {
    rpc Create(CreateTeacher) returns (Void);
    rpc Update(UpdateTeacher) returns (Void);
    rpc Delete(ById) returns (Void);
    rpc GetById(ById) returns (TeacherRes);
    rpc GetList(GetListTeacherReq) returns (GetListTeacherRes);
}

message CreateTeacher {
    string name = 1;
    string experience_years = 2;
    string ielts_score = 3;
    string profile_picture_url = 4;
    string contact = 5;
    string graduated_students = 6;
}

message UpdateTeacher {
    string id = 1;
    string name = 2;
    string experience_years = 3;
    string ielts_score = 4;
    string profile_picture_url = 5;
    string contact = 6;
    string graduated_students = 7;
}

message TeacherRes {
    string id = 1;
    string name = 2;
    string experience_years = 3;
    string ielts_score = 4;
    string profile_picture_url = 5;
    string contact = 6;
    string graduated_students = 7;
    string created_at = 8;
}

message GetListTeacherReq {
    string name = 1;
    string experience_years_min = 2;
    string experience_years_max = 3;
    Filter filter = 6;
}

message GetListTeacherRes {
    repeated TeacherRes teacher = 1;
    int32 total_count = 2;
}
